# Ampex-ATR-102-Studer-A820

./: README.md
.github/workflows/: build.yml
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedInstanceManager.cpp  SharedInstanceManager.h  TrackStripComponent.cpp  TrackStripComponent.h
Source/DSP/: BiasShielding.cpp  BiasShielding.h  HybridTapeProcessor.cpp  HybridTapeProcessor.h  JilesAthertonCore.h  MachineEQ.cpp  MachineEQ.h  MathConstants.h  THDSweepTest.h  auto_tune.cpp  fine_sweep.cpp  thd_param_test.cpp  thd_verify.cpp
